[package]
name = "cloudflare_deprecation_reverse_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
env_logger = "0.11.8"
log = { version = "0.4", features = ["std", "serde"] }
pingora = { version = "0.4.0", features = ["proxy", "rustls", "lb"] }
bytes = "1.0"

[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
